--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ margin:auto;
       <li>Jugar al futbol con amigos</li>
       <li>Investigar nuevas tecnologias</li>
       <li>Escuchar músicas</li>
-      <li>Salir de fiesta debes en cuando</li>
+      <li>Salir de fiesta de vez en cuando</li>
       <li>Estudiar</li>
   </ul>
       <h2>Referencias</h2>
