--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ margin:auto;
       <li>Jugar al futbol con amigos</li>
       <li>Investigar nuevas tecnologias</li>
       <li>Escuchar músicas</li>
+      <li>Estar con mi novia cada fin de samana viendo alguna película</li>
       <li>Salir de fiesta de vez en cuando</li>
       <li>Estudiar</li>
   </ul>
